--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Diego Espinosa</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Made By Diego Espinosa</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
